--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 data_NERR/** filter=lfs diff=lfs merge=lfs -text
 data_NERR/**/* filter=lfs diff=lfs merge=lfs -text
+data_NERR/output/cbv_hf_wq_predictions.csv filter=lfs diff=lfs merge=lfs -text
+data_NERR/output/owc_hf_wq_predictions.csv filter=lfs diff=lfs merge=lfs -text
